plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'store.dalkak'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

compileJava {
	options.compilerArgs << '-parameters'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	//querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// NCP Object Storage 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// 이미지 리사이징 을 위한 라이브러리
	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

	// kafka
	implementation 'org.springframework.kafka:spring-kafka'
	implementation "com.github.danielwegener:logback-kafka-appender:0.1.0"

	// elasticsearch
	implementation 'co.elastic.clients:elasticsearch-java:8.12.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.10.1'

	//oidc 검증
	implementation 'com.auth0:java-jwt:3.19.0'
	implementation 'com.auth0:jwks-rsa:0.21.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
